fix div wrapped in a tag issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -75,7 +75,7 @@ p {
 
 
   .outer-project-box {
-    margin: 20px 7px 0px 7px;
+    margin: 0px 7px 14px 7px;
   }
   
 }
